beryllium (0.8.3) debian;

  * Allow bitrate=0 for automatic bitrate calc

 -- Pavel Bludov <pbludov@gmail.com>  Mon, 17 Mar 2014 13:50:00 +0900

beryllium (0.8.2) debian;

  * TranslateToLatin for non ASCII characters

 -- Pavel Bludov <pbludov@gmail.com>  Fri, 14 Mar 2014 18:07:00 +0900

beryllium (0.8.1) debian;

  * Debug settings page
  * --config-path arg

 -- Pavel Bludov <pbludov@gmail.com>  Fri, 14 Mar 2014 13:44:00 +0900

beryllium (0.8.0) debian;

  * Pipline fix
  * New hotkey settings dialog

 -- Pavel Bludov <pbludov@gmail.com>  Fri, 7 Mar 2014 13:00:00 +0900

beryllium (0.7.3) debian;

  * Video settings fix

 -- Pavel Bludov <pbludov@gmail.com>  Wed, 5 Mar 2014 12:12:00 +0900

beryllium (0.7.2) debian;

  * Video log record fix
  * Study description fix

 -- Pavel Bludov <pbludov@gmail.com>  Tue, 4 Mar 2014 14:42:00 +0900

beryllium (0.7.1) debian;

  * Make folder unique is now off by default
  * Persist study counter
  * Command line switch to change settings

 -- Pavel Bludov <pbludov@gmail.com>  Tue, 4 Mar 2014 10:35:00 +0900

beryllium (0.7.0) debian;

  * Builtin motion detection
  * Translation fixes

 -- Pavel Bludov <pbludov@gmail.com>  Fri, 28 Feb 2014 17:00:00 +0900

beryllium (0.6.0) debian;

  * Video start of the cut fix
  * Motion detection via opencv plugin
  * Compressed sources support (DV, MPEG cameras)

 -- Pavel Bludov <pbludov@gmail.com>  Tue, 25 Feb 2014 12:49:00 +0900

beryllium (0.5.0) debian;

  * Confirmation settings
  * Modality can be selected from one of four build-ins
  * Real OID (1.2.643.2.66)

 -- Pavel Bludov <pbludov@gmail.com>  Tue, 18 Feb 2014 13:45:00 +0900

beryllium (0.4.3) debian;

  * New field: Accession number is hidden by default
  * Clips & images uses different series_no/series_uid

 -- Pavel Bludov <pbludov@gmail.com>  Thu, 13 Feb 2014 11:22:00 +0900

beryllium (0.4.2) debian;

  * New field: Accession number
  * startStudy new parameter: (accessionNumber,id,name,sex,bd,phys,study)