@@ -1,3 +1,9 @@
+beryllium (0.8.4) debian;
+
+  * Ignore duplicate studies via d-bus
+
+ -- Pavel Bludov <pbludov@gmail.com>  Tue, 18 Mar 2014 15:16:00 +0900
+
 beryllium (0.8.3) debian;
 
   * Allow bitrate=0 for automatic bitrate calc
